--- a/DH2022/ocr_with_w2v/prepare_dataset.ipynb
+++ b/DH2022/ocr_with_w2v/prepare_dataset.ipynb
@@ -1,27 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Installation\n",
-    "\n",
-    "For these tutorials, we need to install some additional libraries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Skip these if you have already install these libraries\n",
-    "!pip install \"nltk\"\n",
-    "!pip install \"gensim\"\n",
-    "!pip install \"thefuzz[speedup]\""
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -337,8 +316,10 @@
    "outputs": [],
    "source": [
     "# filter w2v_words\n",
+    "seedwords_cutoff = 5000\n",
+    "\n",
     "w2v_words = [x for x in w2v_words if 4 <= len(x) <= 7]\n",
-    "w2v_words = w2v_words[:2000]"
+    "w2v_words = w2v_words[:seedwords_cutoff]"
    ]
   },
   {
@@ -376,7 +357,7 @@
    "outputs": [],
    "source": [
     "# Write string pairs into a file:\n",
-    "with open(os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}.txt\"), \"w\") as fw:\n",
+    "with open(os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}_{seedwords_cutoff}.txt\"), \"w\") as fw:\n",
     "    for nm in negative_matches:\n",
     "        fw.write(nm)\n",
     "    for pm in positive_matches:\n",
@@ -396,12 +377,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}.txt\")) as fr:\n",
+    "with open(os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}_{seedwords_cutoff}.txt\")) as fr:\n",
     "    pairs = fr.readlines()\n",
     "\n",
     "# Write queries into a file (in this case, all words in the OCR word2vec model vocabulary\n",
     "# if they are in the list of English words):\n",
-    "with open(os.path.join(\"data\", f\"candidates_{model_name}.txt\"), \"w\") as fw:\n",
+    "with open(os.path.join(\"data\", f\"candidates_{model_name}_{seedwords_cutoff}.txt\"), \"w\") as fw:\n",
     "    candidates_set = set()\n",
     "    for p in pairs:\n",
     "        candidate = p.split(\"\\t\")\n",
@@ -423,12 +404,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}.txt\")) as fr:\n",
+    "with open(os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}_{seedwords_cutoff}.txt\")) as fr:\n",
     "    pairs = fr.readlines()\n",
     "\n",
     "# Write queries into a file (in this case, all words in the OCR word2vec model vocabulary\n",
     "# if they are not in the list of English words):\n",
-    "with open(os.path.join(\"data\", f\"queries_{model_name}.txt\"), \"w\") as fw:\n",
+    "with open(os.path.join(\"data\", f\"queries_{model_name}_{seedwords_cutoff}.txt\"), \"w\") as fw:\n",
     "    for p in pairs:\n",
     "        query = p.split(\"\\t\")\n",
     "        if len(query[1]) > 4 and (not query[1] in english_words):\n",
