--- a/DH2022/ocr_with_w2v/tutorial_ocr_w2v.ipynb
+++ b/DH2022/ocr_with_w2v/tutorial_ocr_w2v.ipynb
@@ -13,18 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Name of the w2v model, from which the string pairs dataset\n",
-    "# has been created:\n",
-    "model_name = \"w2v_1760_1900\""
+    "# Name of the word embedding model\n",
+    "model_name = \"w2v_1760_1900\"\n",
+    "seedwords_cutoff = 5000\n",
+    "\n",
+    "# ---- \n",
+    "# We used this to create the string pairs dataset (refer to `prepare_dataset` notebook for more info)"
    ]
   },
   {
@@ -42,11 +36,12 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "from DeezyMatch import train as dm_train\n",
     "\n",
     "# train a new model\n",
     "dm_train(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"), \n",
-    "         dataset_path=os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}.txt\"), \n",
+    "         dataset_path=os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}_{seedwords_cutoff}.txt\"), \n",
     "         model_name=model_name)"
    ]
   },
@@ -82,7 +77,7 @@
     "\n",
     "# model inference using a model stored at pretrained_model_path and pretrained_vocab_path \n",
     "dm_inference(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"),\n",
-    "             dataset_path=os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}.txt\"), \n",
+    "             dataset_path=os.path.join(\"data\", f\"w2v_ocr_pairs_{model_name}_{seedwords_cutoff}.txt\"), \n",
     "             pretrained_model_path=os.path.join(\"models\", f\"{model_name}\", f\"{model_name}.model\"), \n",
     "             pretrained_vocab_path=os.path.join(\"models\", f\"{model_name}\", f\"{model_name}.vocab\"))"
    ]
@@ -105,7 +100,7 @@
     "# generate vectors for queries (specified in dataset_path) \n",
     "# using a model stored at pretrained_model_path and pretrained_vocab_path \n",
     "dm_inference(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"),\n",
-    "             dataset_path=os.path.join(\"data\", f\"queries_{model_name}.txt\"), \n",
+    "             dataset_path=os.path.join(\"data\", f\"queries_{model_name}_{seedwords_cutoff}.txt\"), \n",
     "             pretrained_model_path=os.path.join(\"models\", f\"{model_name}\", f\"{model_name}.model\"), \n",
     "             pretrained_vocab_path=os.path.join(\"models\", f\"{model_name}\", f\"{model_name}.vocab\"),\n",
     "             inference_mode=\"vect\",\n",
@@ -130,7 +125,7 @@
     "# generate vectors for candidates (specified in dataset_path) \n",
     "# using a model stored at pretrained_model_path and pretrained_vocab_path \n",
     "dm_inference(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"),\n",
-    "             dataset_path=os.path.join(\"data\", f\"candidates_{model_name}.txt\"), \n",
+    "             dataset_path=os.path.join(\"data\", f\"candidates_{model_name}_{seedwords_cutoff}.txt\"), \n",
     "             pretrained_model_path=os.path.join(\"models\", f\"{model_name}\", f\"{model_name}.model\"), \n",
     "             pretrained_vocab_path=os.path.join(\"models\", f\"{model_name}\", f\"{model_name}.vocab\"),\n",
     "             inference_mode=\"vect\",\n",
