--- a/DH2022/ocr_with_w2v/prepare_dataset.ipynb
+++ b/DH2022/ocr_with_w2v/prepare_dataset.ipynb
@@ -154,9 +154,9 @@
     "\n",
     "```\n",
     "ocr_with_w2v\n",
-    "├── README.md\n",
     "├── data\n",
     "│   └── embeddings\n",
+    "│       ├── README.md\n",
     "│       ├── w2v_1760_1850\n",
     "│       │   ├── w2v_words.model\n",
     "│       │   ├── w2v_words.model.trainables.syn1neg.npy\n",
@@ -414,6 +414,29 @@
     "        query = p.split(\"\\t\")\n",
     "        if len(query[1]) > 4 and (not query[1] in english_words):\n",
     "            fw.write(query[1] + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The directory structure at the end of this notebook is (assuming `seedwords_cutoff = 5000`):\n",
+    "\n",
+    "```\n",
+    "ocr_with_w2v\n",
+    "├── data\n",
+    "│   ├── candidates_w2v_1760_1900_5000.txt\n",
+    "│   ├── embeddings\n",
+    "│   │   └── ...\n",
+    "│   ├── queries_w2v_1760_1900_5000.txt\n",
+    "│   └── w2v_ocr_pairs_w2v_1760_1900_5000.txt\n",
+    "├── images\n",
+    "│   └── ...\n",
+    "├── inputs\n",
+    "│   └── ...\n",
+    "├── prepare_dataset.ipynb\n",
+    "└── tutorial_ocr_w2v.ipynb\n",
+    "```"
    ]
   }
  ],
