--- a/DH2022/ocr_with_w2v/tutorial_ocr_w2v.ipynb
+++ b/DH2022/ocr_with_w2v/tutorial_ocr_w2v.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
