--- a/DH2022/libyan_gazetteer/prepare_dataset.ipynb
+++ b/DH2022/libyan_gazetteer/prepare_dataset.ipynb
@@ -11,7 +11,7 @@
     "import string\n",
     "import random\n",
     "import pandas as pd\n",
-    "from fuzzywuzzy import fuzz"
+    "from thefuzz import fuzz"
    ]
   },
   {
