--- a/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
+++ b/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
@@ -18,6 +18,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seedwords_cutoff = 5000"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,7 +45,7 @@
     "\n",
     "# train a new model\n",
     "dm_train(input_file_path=\"inputs/input_dfm.yaml\", \n",
-    "         dataset_path=\"data/libyan_pairs.txt\", \n",
+    "         dataset_path=f\"data/libyan_pairs_{seedwords_cutoff}.txt\", \n",
     "         model_name=\"hgl001\")"
    ]
   },
@@ -72,7 +81,7 @@
     "\n",
     "# model inference using a model stored at pretrained_model_path and pretrained_vocab_path \n",
     "dm_inference(input_file_path=\"inputs/input_dfm.yaml\",\n",
-    "             dataset_path=\"data/libyan_pairs.txt\", \n",
+    "             dataset_path=f\"data/libyan_pairs_{seedwords_cutoff}.txt\",\n",
     "             pretrained_model_path=\"./models/hgl001/hgl001.model\", \n",
     "             pretrained_vocab_path=\"./models/hgl001/hgl001.vocab\")"
    ]
