Add specify how to run with all pairs

--- a/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
+++ b/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
@@ -23,7 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seedwords_cutoff = 5000"
+    "# set to \"all\" if you intend to run it using all the pairs set\n",
+    "# it might take a long time though!\n",
+    "# other options: 5000 or 20000 pairs\n",
+    "seedwords_cutoff = 5000 "
    ]
   },
   {
@@ -240,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('py39deezy': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +261,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "26a5527aa58fafc67e53d83503597f8ba110345d20ac6660bedc50bf2ce973f6"
+    "hash": "39f698b6b476a457d750de05425226ed5b0f827b20034fd5a58dddc9c6f6dc67"
    }
   }
  },
