--- a/DH2022/libyan_gazetteer/prepare_dataset.ipynb
+++ b/DH2022/libyan_gazetteer/prepare_dataset.ipynb
@@ -108,27 +108,30 @@
    "outputs": [],
    "source": [
     "# Load the country-specific gazetteer (we need to specify the column names):\n",
-    "df_country = pd.read_csv(\"data/\" + country + \".txt\", sep=\"\\t\", names=[\n",
-    "                                                        \"geonameid\", \n",
-    "                                                        \"name\", \n",
-    "                                                        \"asciiname\", \n",
-    "                                                        \"alternatenames\", \n",
-    "                                                        \"latitude\", \n",
-    "                                                        \"longitude\", \n",
-    "                                                        \"feature class\", \n",
-    "                                                        \"feature code\", \n",
-    "                                                        \"country code\", \n",
-    "                                                        \"cc2\", \n",
-    "                                                        \"admin1 code\", \n",
-    "                                                        \"admin2 code\", \n",
-    "                                                        \"admin3 code\", \n",
-    "                                                        \"admin4 code\", \n",
-    "                                                        \"population\", \n",
-    "                                                        \"elevation\", \n",
-    "                                                        \"dem\", \n",
-    "                                                        \"timezone\", \n",
-    "                                                        \"modification date\"\n",
-    "                                                        ])"
+    "\n",
+    "col_names = [\n",
+    "    \"geonameid\", \n",
+    "    \"name\", \n",
+    "    \"asciiname\", \n",
+    "    \"alternatenames\", \n",
+    "    \"latitude\", \n",
+    "    \"longitude\", \n",
+    "    \"feature class\", \n",
+    "    \"feature code\", \n",
+    "    \"country code\", \n",
+    "    \"cc2\", \n",
+    "    \"admin1 code\", \n",
+    "    \"admin2 code\", \n",
+    "    \"admin3 code\", \n",
+    "    \"admin4 code\", \n",
+    "    \"population\", \n",
+    "    \"elevation\", \n",
+    "    \"dem\", \n",
+    "    \"timezone\", \n",
+    "    \"modification date\"\n",
+    "    ]\n",
+    "\n",
+    "df_country = pd.read_csv(\"data/\" + country + \".txt\", sep=\"\\t\", names=col_names)"
    ]
   },
   {
@@ -181,7 +184,7 @@
    "outputs": [],
    "source": [
     "# Load the alternate names file:\n",
-    "altnames_df = pd.read_csv(\"data/alternateNamesV2.txt\",\n",
+    "altnames_df = pd.read_csv(os.path.join(\"data\", \"alternateNamesV2.txt\"),\n",
     "                          sep=\"\\t\", \n",
     "                          low_memory=False, \n",
     "                          names=[\n",
@@ -373,7 +376,7 @@
    "outputs": [],
    "source": [
     "# Write string pairs into a file (this is the string matching dataset):\n",
-    "with open(\"data/libyan_pairs.txt\", \"w\") as fw:\n",
+    "with open(os.path.join(\"data\", \"libyan_pairs.txt\"), \"w\") as fw:\n",
     "    for nm in negative_matches:\n",
     "        fw.write(nm + \"\\n\")\n",
     "    for pm in positive_matches:\n",
@@ -405,7 +408,7 @@
    "outputs": [],
    "source": [
     "# Store the candidates dataset, with one toponym per line\n",
-    "with open(\"data/candidates.txt\", \"w\") as fw:\n",
+    "with open(os.path.join(\"data\", \"candidates.txt\"), \"w\") as fw:\n",
     "    for c in set(candidates):\n",
     "        fw.write(c + \"\\n\")"
    ]
@@ -424,7 +427,7 @@
    "outputs": [],
    "source": [
     "# Load the HGL data json file:\n",
-    "with open('data/hgl_data.json') as json_file:\n",
+    "with open(os.path.join(\"data\", \"hgl_data.json\")) as json_file:\n",
     "    data = json.load(json_file)"
    ]
   },
@@ -435,7 +438,7 @@
    "outputs": [],
    "source": [
     "# Store the queries dataset, with one toponym per line\n",
-    "with open(\"data/queries.txt\", \"w\") as fw:\n",
+    "with open(os.path.join(\"data\", \"queries.txt\"), \"w\") as fw:\n",
     "    for entry in data[\"features\"]:\n",
     "        fw.write(entry[\"title\"].split(\",\")[0] + \"\\n\")"
    ]
