--- a/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
+++ b/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
@@ -47,8 +47,8 @@
     "from DeezyMatch import train as dm_train\n",
     "\n",
     "# train a new model\n",
-    "dm_train(input_file_path=\"inputs/input_dfm.yaml\", \n",
-    "         dataset_path=f\"data/libyan_pairs_{seedwords_cutoff}.txt\", \n",
+    "dm_train(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"), \n",
+    "         dataset_path=os.path.join(\"data\", f\"libyan_pairs_{seedwords_cutoff}.txt\"), \n",
     "         model_name=\"hgl001\")"
    ]
   },
@@ -61,7 +61,7 @@
     "from DeezyMatch import plot_log\n",
     "\n",
     "# plot log file\n",
-    "plot_log(path2log=\"./models/hgl001/log.txt\", \n",
+    "plot_log(path2log=os.path.join(\"models\", \"hgl001\", \"log.txt\"), \n",
     "         output_name=\"log_hgl001\")"
    ]
   },
@@ -83,10 +83,10 @@
     "from DeezyMatch import inference as dm_inference\n",
     "\n",
     "# model inference using a model stored at pretrained_model_path and pretrained_vocab_path \n",
-    "dm_inference(input_file_path=\"inputs/input_dfm.yaml\",\n",
-    "             dataset_path=f\"data/libyan_pairs_{seedwords_cutoff}.txt\",\n",
-    "             pretrained_model_path=\"./models/hgl001/hgl001.model\", \n",
-    "             pretrained_vocab_path=\"./models/hgl001/hgl001.vocab\")"
+    "dm_inference(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"),\n",
+    "             dataset_path=os.path.join(\"data\", f\"libyan_pairs_{seedwords_cutoff}.txt\"),\n",
+    "             pretrained_model_path=os.path.join(\"models\", \"hgl001\", \"hgl001.model\"), \n",
+    "             pretrained_vocab_path=os.path.join(\"models\", \"hgl001\", \"hgl001.vocab\"))"
    ]
   },
   {
@@ -106,12 +106,12 @@
     "\n",
     "# generate vectors for queries (specified in dataset_path) \n",
     "# using a model stored at pretrained_model_path and pretrained_vocab_path \n",
-    "dm_inference(input_file_path=\"inputs/input_dfm.yaml\",\n",
-    "            dataset_path=\"data/queries.txt\", \n",
-    "            pretrained_model_path=\"./models/hgl001/hgl001.model\", \n",
-    "            pretrained_vocab_path=\"./models/hgl001/hgl001.vocab\",\n",
+    "dm_inference(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"),\n",
+    "            dataset_path=os.path.join(\"data\", \"queries.txt\"), \n",
+    "            pretrained_model_path=os.path.join(\"models\", \"hgl001\", \"hgl001.model\"), \n",
+    "            pretrained_vocab_path=os.path.join(\"models\", \"hgl001\", \"hgl001.vocab\"),\n",
     "            inference_mode=\"vect\",\n",
-    "            scenario=\"queries/test\")"
+    "            scenario=os.path.join(\"queries\", \"test\"))"
    ]
   },
   {
@@ -131,12 +131,12 @@
     "\n",
     "# generate vectors for candidates (specified in dataset_path) \n",
     "# using a model stored at pretrained_model_path and pretrained_vocab_path \n",
-    "dm_inference(input_file_path=\"inputs/input_dfm.yaml\",\n",
-    "             dataset_path=\"data/candidates.txt\", \n",
-    "             pretrained_model_path=\"./models/hgl001/hgl001.model\", \n",
-    "             pretrained_vocab_path=\"./models/hgl001/hgl001.vocab\",\n",
+    "dm_inference(input_file_path=os.path.join(\"inputs\", \"input_dfm.yaml\"),\n",
+    "             dataset_path=os.path.join(\"data\", \"candidates.txt\"), \n",
+    "             pretrained_model_path=os.path.join(\"models\", \"hgl001\", \"hgl001.model\"), \n",
+    "             pretrained_vocab_path=os.path.join(\"models\", \"hgl001\", \"hgl001.vocab\"),\n",
     "             inference_mode=\"vect\",\n",
-    "             scenario=\"candidates/test\")"
+    "             scenario=os.path.join(\"candidates\", \"test\"))"
    ]
   },
   {
@@ -158,8 +158,8 @@
     "\n",
     "# combine vectors stored in queries/test and save them in combined/queries_test\n",
     "combine_vecs(rnn_passes=['fwd', 'bwd'], \n",
-    "             input_scenario='queries/test', \n",
-    "             output_scenario='combined/queries_test', \n",
+    "             input_scenario=os.path.join(\"queries\", \"test\"), \n",
+    "             output_scenario=os.path.join(\"combined\", \"queries_test\"), \n",
     "             print_every=10)"
    ]
   },
@@ -182,8 +182,8 @@
     "\n",
     "# combine vectors stored in candidates/test and save them in combined/candidates_test\n",
     "combine_vecs(rnn_passes=['fwd', 'bwd'], \n",
-    "             input_scenario='candidates/test', \n",
-    "             output_scenario='combined/candidates_test', \n",
+    "             input_scenario=os.path.join(\"candidates\", \"test\"), \n",
+    "             output_scenario=os.path.join(\"combined\", \"candidates_test\"), \n",
     "             print_every=10)"
    ]
   },
@@ -208,17 +208,17 @@
     "# find candidates from candidate_scenario \n",
     "# for queries specified in query_scenario\n",
     "candidates_pd = \\\n",
-    "    candidate_ranker(query_scenario=\"./combined/queries_test\",\n",
-    "                     candidate_scenario=\"./combined/candidates_test\", \n",
+    "    candidate_ranker(query_scenario=os.path.join(\"combined\", \"queries_test\"),\n",
+    "                     candidate_scenario=os.path.join(\"combined\", \"candidates_test\"), \n",
     "                     ranking_metric=\"faiss\", \n",
     "                     selection_threshold=15., \n",
     "                     num_candidates=3, \n",
     "                     search_size=3, \n",
     "                     verbose=False,\n",
     "                     use_predict=False,\n",
-    "                     output_path=\"ranker_results/test_candidates_deezymatch\", \n",
-    "                     pretrained_model_path=\"./models/hgl001/hgl001.model\", \n",
-    "                     pretrained_vocab_path=\"./models/hgl001/hgl001.vocab\", \n",
+    "                     output_path=os.path.join(\"ranker_results\", \"test_candidates_deezymatch\"), \n",
+    "                     pretrained_model_path=os.path.join(\"models\", \"hgl001\", \"hgl001.model\"), \n",
+    "                     pretrained_vocab_path=os.path.join(\"models\", \"hgl001\", \"hgl001.vocab\"), \n",
     "    )"
    ]
   },
@@ -243,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('py39deezy': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
