--- a/DH2022/ocr_with_w2v/prepare_dataset.ipynb
+++ b/DH2022/ocr_with_w2v/prepare_dataset.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "In the image, the left side shows the human-corrected version of an OCRed fragment:\n",
     "\n",
-    "![](images/ocr_aligment.png)\n",
+    "![](images/OCR_aligment.png)\n",
     "\n",
     "Source: **[HERE THE SOURCE]**"
    ]
