Update ocr notebook

--- a/DH2022/ocr_with_w2v/prepare_dataset.ipynb
+++ b/DH2022/ocr_with_w2v/prepare_dataset.ipynb
@@ -56,7 +56,8 @@
     "\n",
     "![](images/OCR_aligment.png)\n",
     "\n",
-    "Source: **[HERE THE SOURCE]**"
+    "Source:\n",
+    "> Van Strien, Daniel, Kaspar Beelen, Mariona Coll Ardanuy, Kasra Hosseini, Barbara McGillivray, and Giovanni Colavizza. \"Assessing the impact of OCR quality on downstream NLP tasks.\" (2020)."
    ]
   },
   {
@@ -442,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (py39deezy)",
    "language": "python",
-   "name": "python3"
+   "name": "py39deezy"
   },
   "language_info": {
    "codemirror_mode": {
