--- a/DH2022/ocr_with_w2v/prepare_dataset.ipynb
+++ b/DH2022/ocr_with_w2v/prepare_dataset.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "![](images/OCR_aligment.png)\n",
     "\n",
-    "Source:\n",
+    "**Source:**\n",
     "> Van Strien, Daniel, Kaspar Beelen, Mariona Coll Ardanuy, Kasra Hosseini, Barbara McGillivray, and Giovanni Colavizza. \"Assessing the impact of OCR quality on downstream NLP tasks.\" (2020)."
    ]
   },
