--- a/DH2022/libyan_gazetteer/prepare_dataset.ipynb
+++ b/DH2022/libyan_gazetteer/prepare_dataset.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "import os\n",
     "import json\n",
     "import string\n",
     "import random\n",
