--- a/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
+++ b/DH2022/libyan_gazetteer/tutorial_hgl.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import pandas as pd"
    ]
@@ -243,9 +244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (py39deezy)",
    "language": "python",
-   "name": "python3"
+   "name": "py39deezy"
   },
   "language_info": {
    "codemirror_mode": {
