--- a/DH2022/DM_101/tutorial_101.ipynb
+++ b/DH2022/DM_101/tutorial_101.ipynb
@@ -281,9 +281,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (py39deezy)",
    "language": "python",
-   "name": "python3"
+   "name": "py39deezy"
   },
   "language_info": {
    "codemirror_mode": {
